--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,12 +8,10 @@
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
   },
-  "chrome_url_overrides": {
-    "newtab": "newtab.html"
-  },
   "icons": {
     "128": "icon-128.png"
   },
+  "permissions": ["tabs", "activeTab", "system.display", "webNavigation"],
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*", "<all_urls>"],
